# agentnet

./: .env.example  .gitignore  Anchor.toml  BRIEF-REGISTER-AGENT.md  CLAUDE.md  README.md  STRUCTURE.md  agents-registry.csv  council-report-20260505.html  package-lock.json  package.json  tsconfig.json
agents-api/: package-lock.json  package.json  tsconfig.json
agents-api/src/: server.ts  types.ts
app/: API.md  API.txt  package-lock.json  package.json
app/src/: index.ts
app/tests/: clean-seed-and-test.ts  deactivate-old-agents.ts  deprecate-agent.ts  fetch-idl.ts  mint-specific-agent.ts  seed-agents.ts  simulate-transactions.ts  test-agents.ts  test-auth.ts  test-deactivate-reactivate.ts  test-escrow-flow.ts  test-integration-flow.ts  test-phantom-flow.ts  test-privy.ts  test-refund.ts  test-register-security.ts  test-register.ts  test-reputation-routes.ts  test-reputation.ts  test-user-agent.ts  tsconfig.json
demo-app/: info_agents.md  package-lock.json  package.json
lancelot/: script_demo_video.txt
programs/agentnet/: Cargo.toml
programs/agentnet/app/src/idl/: agentnet.json
programs/agentnet/src/: errors.rs  lib.rs
programs/agentnet/src/instructions/: contest_escrow.rs  create_escrow.rs  mod.rs  refund_escrow.rs  register_agent.rs  submit_result.rs  update_agent.rs  verify_and_release.rs  withdraw_stake.rs
programs/agentnet/src/state/: agent.rs  escrow.rs  interaction_pair.rs  mod.rs  owner_registry.rs  reputation.rs  stake_vault.rs
simulation/: package.json
tests/: agentnet.ts
web/: package-lock.json  package.json  tailwind.config.ts
(+60 files in other folders)
